# Self-media

./: .clinerules  .env.example  .gitignore  Cargo.toml  README.md
.codebuddy/teams/self-media-dev/: config.json
.github/workflows/: ci.yml
crates/self-media-ai/: Cargo.toml
crates/self-media-ai/src/: client.rs  error.rs  lib.rs  model.rs
crates/self-media-app/: Cargo.toml  tauri.conf.json
crates/self-media-app/src/: main.rs
crates/self-media-app/src-tauri/capabilities/: default.json
crates/self-media-core/: Cargo.toml
crates/self-media-core/src/: error.rs  lib.rs  test.rs  types.rs
crates/self-media-core/src/config/: mod.rs  service.rs
crates/self-media-core/src/draft/: mod.rs  service.rs
crates/self-media-core/src/hotspot/: mod.rs  service.rs
crates/self-media-core/src/task/: executor.rs  mod.rs  model.rs  scheduler.rs
crates/self-media-core/src/user/: mod.rs  model.rs  service.rs
crates/self-media-crypto/: Cargo.toml
crates/self-media-crypto/src/: error.rs  hash.rs  lib.rs  system_key.rs  user_key.rs
crates/self-media-db/: Cargo.toml
crates/self-media-db/src/: error.rs  lib.rs  pool.rs
crates/self-media-publish/: Cargo.toml
crates/self-media-publish/src/: health.rs  lib.rs  publisher.rs  qr_login.rs  rate_limiter.rs  registry.rs
crates/self-media-publish/src/adapters/: bilibili.rs  bilibili_qr.rs  douyin.rs  douyin_qr.rs  mod.rs  toutiao.rs  toutiao_qr.rs  wechat.rs  wechat_qr.rs  weibo.rs  weibo_qr.rs  xiaohongshu.rs  xiaohongshu_qr.rs
crates/self-media-web/: Cargo.toml
crates/self-media-web/src/: auth.rs  config.rs  csrf.rs  draft.rs  hotspot.rs  main.rs  qr_login.rs  sse.rs  storage.rs  task.rs  upload.rs
docs/: 00-总纲.md  01-用户模块.md  02-AI集成模块.md  03-平台发布模块.md  04-热点检索模块.md  05-任务调度模块.md  06-配置管理模块.md  07-加密与密钥管理模块.md  08-前端设计.md  09-安全设计.md  10-API接口设计.md  11-构建与部署.md  12-项目缺失分析.md  2026-04-15审查.md  test
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.vue  style.css
frontend/src/api/: auth.ts  config.ts  draft.ts  hotspot.ts  http.ts  platform.ts  task.ts
frontend/src/components/: CookieStatus.vue  HotspotCard.vue  ModeSelector.vue  PlatformSelector.vue  QRLogin.vue  TaskProgress.vue
frontend/src/composables/: useSSE.ts  useTask.ts  useTauri.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: task.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: sanitize.ts
frontend/src/views/: Create.vue  Dashboard.vue  Drafts.vue  Hotspot.vue  Login.vue  Platforms.vue  Register.vue  Settings.vue  Tasks.vue
migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_platform_configs.sql  004_create_api_keys.sql  005_create_user_preferences.sql  006_create_tasks.sql  007_create_task_steps.sql  008_create_platform_configs.sql  009_add_missing_indexes.sql  010_add_model_config.sql  010_add_user_extended_fields.sql.bak  011_add_event_date_to_tasks.sql  014_add_encrypted_user_key.sql
