[package]
name = "self-media-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
bcrypt = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
