[package]
name = "self-media-web"
version.workspace = true
edition.workspace = true

[dependencies]
self-media-core = { workspace = true }
self-media-crypto = { workspace = true }
self-media-db = { workspace = true }
self-media-ai = { workspace = true }
self-media-publish = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
rand = "0.8"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
async-stream = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
